fix: set z-index to tab trigger

--- a/src/pages/profile/ProfilePage.module.css
+++ b/src/pages/profile/ProfilePage.module.css
@@ -109,7 +109,8 @@
 .TabTriggerList {
     position: sticky;
     top: 0;
-    background-color: #fff;
+    background-color: var(--color-neutral-0);
+    z-index: 1;
 }
 
 .TabContent {
